Added OAuth2 placeholders

--- a/config
+++ b/config
@@ -25,3 +25,7 @@ MAIL_DEFAULT_SENDER = MAIL_USERNAME
 
 ERROR_HEADER_500 = 'AlveoTT: Internal Error Encountered'
 ADMINS = ['david.irving@mq.edu.au']
+
+# OAuth2
+ALVEO_APP_ID = ''
+ALVEO_APP_SECRET = ''
