--- a/alveott/package.json
+++ b/alveott/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "wavesurfer.js": "^2.0.0-beta01",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
