Fix build instructions, added pouchdb to dependencies

--- a/alveott/package.json
+++ b/alveott/package.json
@@ -24,7 +24,8 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "wavesurfer.js": "^2.0.0-beta01",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "pouchdb": "^@6.2.0 "
   },
   "devDependencies": {
     "@angular/cli": "1.2.0",
