--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.3.1",
-    "@angular/common": "4.3.1",
-    "@angular/compiler": "4.3.1",
-    "@angular/core": "4.3.1",
-    "@angular/forms": "4.3.1",
-    "@angular/http": "4.3.1",
-    "@angular/platform-browser": "4.3.1",
-    "@angular/platform-browser-dynamic": "4.3.1",
-    "@angular/router": "4.3.1",
+    "@angular/animations": "^4.3.2",
+    "@angular/common": "^4.3.2",
+    "@angular/compiler": "^4.3.2",
+    "@angular/core": "^4.3.2",
+    "@angular/forms": "^4.3.2",
+    "@angular/http": "^4.3.2",
+    "@angular/platform-browser": "^4.3.2",
+    "@angular/platform-browser-dynamic": "^4.3.2",
+    "@angular/router": "^4.3.2",
     "core-js": "2.4.1",
     "pouchdb": "^6.3.4",
     "rxjs": "5.4.2",
     "wavesurfer.js": "2.0.0-beta01",
-    "zone.js": "0.8.14"
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.3",
-    "@angular/compiler-cli": "4.3.1",
-    "@angular/language-service": "4.3.1",
+    "@angular/cli": "1.2.6",
+    "@angular/compiler-cli": "4.3.2",
+    "@angular/language-service": "4.3.2",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.14",
+    "@types/node": "^8.0.17",
     "codelyzer": "~3.1.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -45,7 +45,7 @@
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "5.1.2",
-    "ts-node": "3.2.1",
+    "ts-node": "3.3.0",
     "tslint": "5.5.0",
     "typescript": "2.4.2"
   }
