--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl --disable-host-check --host 0.0.0.0",
+    "start": "ng serve --ssl --host 0.0.0.0",
     "build": "ng build",
     "buildprod": "ng build --aot --prod",
     "test": "ng test",
