--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
+    "angular2-json2csv": "^1.1.2",
     "core-js": "2.5.1",
     "hammerjs": "^2.0.8",
     "pouchdb": "^6.3.4",
