--- a/package.json
+++ b/package.json
@@ -7,42 +7,43 @@
     "start": "ng serve --ssl --host 0.0.0.0",
     "build": "ng build",
     "buildprod": "ng build --aot --prod",
+    "buildtest": "ng build --aot --env=staging",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.6",
-    "@angular/cdk": "^2.0.0-beta.10",
-    "@angular/common": "^4.3.6",
-    "@angular/compiler": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/material": "^2.0.0-beta.10",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/platform-browser-dynamic": "^4.3.6",
-    "@angular/router": "^4.3.6",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
     "angular2-json2csv": "^1.1.2",
     "core-js": "2.5.1",
     "hammerjs": "^2.0.8",
     "pouchdb": "^6.3.4",
-    "rxjs": "5.5.0",
+    "rxjs": "5.5.2",
     "wavesurfer.js": "2.0.0-beta02",
-    "zone.js": "^0.8.17"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@angular/cli": "1.4.9",
     "@angular/compiler-cli": "4.4.6",
     "@angular/language-service": "4.4.6",
-    "@types/jasmine": "~2.6.0",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.25",
-    "codelyzer": "~3.2.1",
+    "@types/jasmine": "~2.6.2",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.0.47",
+    "codelyzer": "~3.2.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.0",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "1.3.0",
@@ -51,6 +52,6 @@
     "protractor": "5.2.0",
     "ts-node": "3.3.0",
     "tslint": "5.8.0",
-    "typescript": "2.3.4"
+    "typescript": "2.5.3"
   }
 }
