--- a/package.json
+++ b/package.json
@@ -15,44 +15,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/animations": "^5.1.2",
+    "@angular/cdk": "^5.0.2",
+    "@angular/common": "^5.1.2",
+    "@angular/compiler": "^5.1.2",
+    "@angular/core": "^5.1.2",
+    "@angular/forms": "^5.1.2",
+    "@angular/http": "^5.1.2",
+    "@angular/material": "^5.0.2",
+    "@angular/platform-browser": "^5.1.2",
+    "@angular/platform-browser-dynamic": "^5.1.2",
+    "@angular/router": "^5.1.2",
     "angular2-json2csv": "^1.1.2",
-    "core-js": "2.5.1",
+    "core-js": "2.5.3",
     "hammerjs": "^2.0.8",
     "pouchdb": "^6.3.4",
-    "rxjs": "5.5.2",
-    "wavesurfer.js": "2.0.0-beta02",
+    "rxjs": "5.5.6",
+    "wavesurfer.js": "2.0.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.9",
-    "@angular/compiler-cli": "4.4.6",
-    "@angular/language-service": "4.4.6",
-    "@types/jasmine": "~2.6.2",
+    "@angular/cli": "1.6.3",
+    "@angular/compiler-cli": "5.1.2",
+    "@angular/language-service": "5.1.2",
+    "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.0.47",
-    "codelyzer": "~3.2.2",
+    "codelyzer": "~4.0.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "1.1.0",
+    "karma-coverage-istanbul-reporter": "1.3.3",
+    "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.2.0",
-    "ts-node": "3.3.0",
+    "protractor": "5.2.2",
+    "ts-node": "4.1.0",
     "tslint": "5.8.0",
-    "typescript": "2.5.3"
+    "typescript": "2.6.2"
   }
 }
