--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^2.4.1",
     "eslint": "^4.15.0",
     "hammerjs": "^2.0.8",
+    "json2csv": "^3.11.5",
     "pouchdb": "^6.4.1",
     "rxjs": "^5.5.2",
     "wavesurfer.js": "^2.0.1",
