--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint": "^4.16.0",
     "hammerjs": "^2.0.8",
     "json2csv": "^3.11.5",
+    "ng2-sticky": "^0.5.0",
+    "ng2-sticky-kit": "^5.3.0",
     "pouchdb": "^6.4.2",
     "rxjs": "^5.5.2",
     "wavesurfer.js": "^2.0.3",
