--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "0.0.23",
-    "@angular-devkit/schematics": "0.0.42",
+    "@angular-devkit/core": "0.0.29",
+    "@angular-devkit/schematics": "0.0.52",
     "@angular/animations": "^5.2.3",
     "@angular/cdk": "^5.1.1",
     "@angular/common": "^5.2.3",
@@ -61,6 +61,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.6.2"
+    "typescript": "^2.5.3"
   }
 }
