--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
+    "@davidlirving/alveo-transcriber-module": "^0.1.5",
     "ajv": "^5.5.2",
     "ajv-keywords": "^2.1.1",
     "core-js": "^2.5.5",
