--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "private": true,
   "dependencies": {
-    "@alveo-vl/angular-transcriber": "^0.1.1",
+    "@alveo-vl/angular-transcriber": "^0.1.2",
+    "@alveo-vl/jsalveo": "^0.0.22",
     "@angular-devkit/core": "0.0.29",
     "@angular-devkit/schematics": "0.0.52",
     "@angular/animations": "^5.2.10",
