Init Angular6 library for the transcriber component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "transcriber-component": [
+        "dist/transcriber-component"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true
