--- a/angular.json
+++ b/angular.json
@@ -112,7 +112,7 @@
         }
       }
     },
-    "a6-e2e": {
+    "alveo-transcription-tool-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -120,7 +120,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "a6:serve"
+            "devServerTarget": "alveo-transcription-tool:serve"
           }
         },
         "lint": {
@@ -133,7 +133,47 @@
           }
         }
       }
+    },
+    "transcriber-component": {
+      "root": "projects/transcriber-component",
+      "sourceRoot": "projects/transcriber-component/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/transcriber-component/tsconfig.lib.json",
+            "project": "projects/transcriber-component/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/transcriber-component/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/transcriber-component/src/test.ts",
+            "tsConfig": "projects/transcriber-component/tsconfig.spec.json",
+            "karmaConfig": "projects/transcriber-component/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/transcriber-component/tsconfig.lib.json",
+              "projects/transcriber-component/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
-  "defaultProject": "a6"
+  "defaultProject": "alveo-transcription-tool"
 }
