--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/common": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
     "@alveo-vl/jsalveo": "^0.0.5",
     "@angular/animations": "^6.0.0",
     "@angular/cdk": "^6.0.1",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
     "@angular/material": "^6.0.1",
@@ -36,7 +36,11 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.0",
+    "@angular-devkit/build-ng-packagr": "~0.6.0",
     "@angular-devkit/build-angular": "~0.6.0",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
     "typescript": "~2.7.2",
     "@angular/cli": "~6.0.0",
     "@angular/language-service": "^6.0.0",
