Fix build and export issues for Angular6 library conversion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
       "dom"
     ],
     "paths": {
-      "transcriber-component": [
-        "dist/transcriber-component"
+      "alveo-transcriber": [
+        "dist/alveo-transcriber"
       ]
     }
   },
