--- a/projects/alveo-transcriber/package.json
+++ b/projects/alveo-transcriber/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alveo-vl/transcriber",
-  "version": "0.0.1",
+  "name": "@alveo-vl/angular-transcriber",
+  "version": "0.2.0",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
