--- a/package.json
+++ b/package.json
@@ -14,48 +14,49 @@
   "private": true,
   "dependencies": {
     "@alveo-vl/jsalveo": "0.0.5",
-    "@angular-devkit/build-angular": "^0.6.1",
-    "@angular/animations": "^6.0.1",
-    "@angular/cdk": "^6.0.1",
-    "@angular/common": "^6.0.1",
-    "@angular/compiler": "^6.0.1",
-    "@angular/core": "^6.0.1",
-    "@angular/forms": "^6.0.1",
-    "@angular/http": "^6.0.1",
-    "@angular/material": "^6.0.1",
-    "@angular/platform-browser": "^6.0.1",
-    "@angular/platform-browser-dynamic": "^6.0.1",
-    "@angular/router": "^6.0.1",
+    "@angular/animations": "^6.0.2",
+    "@angular/cdk": "^6.0.2",
+    "@angular/common": "^6.0.2",
+    "@angular/compiler": "^6.0.2",
+    "@angular/core": "^6.0.2",
+    "@angular/forms": "^6.0.2",
+    "@angular/http": "^6.0.2",
+    "@angular/material": "^6.0.2",
+    "@angular/platform-browser": "^6.0.2",
+    "@angular/platform-browser-dynamic": "^6.0.2",
+    "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "json2csv": "^4.1.2",
     "pouchdb": "^6.4.3",
+    "request": "^2.86.0",
+    "request-promise-native": "^1.0.5",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.1.0",
     "wavesurfer.js": "^2.0.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.1",
-    "@angular-devkit/build-angular": "~0.6.1",
-    "tsickle": "^0.28.0",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "^6.0.1",
-    "@angular/language-service": "^6.0.1",
+    "@angular-devkit/build-angular": "^0.6.3",
+    "@angular/cli": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.2",
+    "@angular/language-service": "^6.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.0.8",
+    "@types/node": "^10.1.2",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.2",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.1.0",
     "protractor": "^5.3.2",
     "ts-node": "~6.0.3",
-    "tslint": "~5.10.0"
+    "tsickle": "^0.28.0",
+    "tslib": "^1.9.1",
+    "tslint": "~5.10.0",
+    "typescript": "~2.7.2"
   }
 }
