--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "postinstall": "node angular6-webpack-patch.js",
   "name": "alveo-transcription-tool",
   "version": "0.0.0",
   "license": "MIT",
