--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --ssl --host 0.0.0.0",
-    "build-production": "ng build --prod --deploy-url /alveo-transcriber --base-href /alveo-transcriber --output-path docs",
+    "build-production": "ng build --prod --deploy-url ./alveo-transcriber/ --output-path docs",
     "build-staging": "ng build --env staging",
     "test": "ng test",
     "lint": "ng lint",
@@ -38,6 +38,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-ng-packagr": "^0.6.3",
     "@angular-devkit/build-angular": "^0.6.3",
     "@angular/cli": "^6.0.3",
     "@angular/compiler-cli": "^6.0.2",
@@ -53,6 +54,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.1.0",
+    "ng-packagr": "^2.4.5",
     "protractor": "^5.3.2",
     "ts-node": "~6.0.3",
     "tsickle": "^0.28.0",
