--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "dexie": "^2.0.3",
     "hammerjs": "^2.0.8",
     "json2csv": "^4.1.2",
-    "pouchdb": "^6.4.3",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
     "wavesurfer.js": "^2.0.3",
