--- a/package.json
+++ b/package.json
@@ -16,35 +16,35 @@
   "private": true,
   "dependencies": {
     "@alveo-vl/jsalveo": "0.1.0",
-    "@angular/animations": "^6.0.3",
-    "@angular/cdk": "^6.1.0",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/material": "^6.1.0",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "core-js": "^2.5.4",
-    "dexie": "^2.0.3",
+    "@angular/animations": "^6.0.4",
+    "@angular/cdk": "^6.2.1",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/core": "^6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/http": "^6.0.4",
+    "@angular/material": "^6.2.1",
+    "@angular/platform-browser": "^6.0.4",
+    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/router": "^6.0.4",
+    "core-js": "^2.5.7",
+    "dexie": "^2.0.4",
     "hammerjs": "^2.0.8",
-    "json2csv": "^4.1.2",
+    "json2csv": "^4.1.3",
     "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.1.0",
+    "rxjs-compat": "^6.2.0",
     "wavesurfer.js": "^2.0.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.6.3",
-    "@angular-devkit/build-ng-packagr": "^0.6.3",
-    "@angular/cli": "^6.0.3",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular-devkit/build-ng-packagr": "^0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.4",
+    "@angular/language-service": "^6.0.4",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.1.2",
+    "@types/node": "^10.3.1",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,9 +55,9 @@
     "karma-jasmine-html-reporter": "^1.1.0",
     "ng-packagr": "^2.4.5",
     "protractor": "^5.3.2",
-    "ts-node": "~6.0.3",
+    "ts-node": "^6.1.0",
     "tsickle": "^0.28.0",
-    "tslib": "^1.9.1",
+    "tslib": "^1.9.2",
     "tslint": "~5.10.0",
     "typescript": "~2.7.2"
   }
