--- a/package.json
+++ b/package.json
@@ -16,46 +16,46 @@
   "private": true,
   "dependencies": {
     "@alveo-vl/jsalveo": "0.1.0",
-    "@angular/animations": "^6.0.4",
+    "@angular/animations": "^6.0.5",
     "@angular/cdk": "^6.2.1",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "^6.0.4",
+    "@angular/common": "^6.0.5",
+    "@angular/compiler": "^6.0.5",
+    "@angular/core": "^6.0.5",
+    "@angular/forms": "^6.0.5",
+    "@angular/http": "^6.0.5",
     "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
-    "@angular/router": "^6.0.4",
+    "@angular/platform-browser": "^6.0.5",
+    "@angular/platform-browser-dynamic": "^6.0.5",
+    "@angular/router": "^6.0.5",
     "core-js": "^2.5.7",
     "dexie": "^2.0.4",
     "hammerjs": "^2.0.8",
     "json2csv": "^4.1.3",
-    "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.2.0",
-    "wavesurfer.js": "^2.0.3",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
+    "wavesurfer.js": "^2.0.6",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.6.8",
     "@angular-devkit/build-ng-packagr": "^0.6.8",
     "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular/language-service": "^6.0.4",
+    "@angular/compiler-cli": "^6.0.5",
+    "@angular/language-service": "^6.0.5",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.3.1",
+    "@types/node": "^10.3.3",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.2",
+    "karma": "^2.0.3",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.1.0",
     "ng-packagr": "^2.4.5",
     "protractor": "^5.3.2",
-    "ts-node": "^6.1.0",
+    "ts-node": "^6.1.1",
     "tsickle": "^0.28.0",
     "tslib": "^1.9.2",
     "tslint": "~5.10.0",
