Update build process

--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,7 @@
               "aot": false,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": false
             }
           }
         },
