--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "ng": "ng",
     "start": "ng serve --ssl --host 0.0.0.0",
     "build-lib": "ng build --prod alveo-transcriber",
-    "build-production": "ng build --prod --deploy-url /alveo-transcriber/ --base-href /alveo-transcriber/ --output-path docs && sh github-pages-build.sh",
-    "build-staging": "ng build --env staging",
+    "build-github": "ng build --prod --deploy-url /alveo-transcriber/ --base-href /alveo-transcriber/ --output-path docs && sh github-pages-build.sh",
+    "build-production": "ng build --prod",
+    "build-staging": "ng build --configuration staging",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -43,11 +44,11 @@
     "@angular/language-service": "^6.0.9",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.5.2",
+    "@types/node": "^10.5.3",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.4",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.1",
