--- a/projects/alveo-transcriber/package.json
+++ b/projects/alveo-transcriber/package.json
@@ -1,13 +1,13 @@
 {
   "name": "alveo-transcriber",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/cdk": "^6.0.1",
-    "@angular/material": "^6.0.1",
-    "json2csv": "^4.1.2",
-    "wavesurfer": "^1.3.4"
+    "@angular/common": "^7.0.0",
+    "@angular/cdk": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/material": "^7.0.0",
+    "json2csv": "^4.2.1",
+    "wavesurfer.js": "^2.1.0"
   },
   "dependencies": {}
 }
